<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context="com.codingpp.myandroid.thread.ThreadActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnThreadPool"
        style="@style/commonButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_200"
        android:text="@string/ThreadPoolExecutor"
        app:layout_constraintBottom_toTopOf="@id/btnScheduled"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnScheduled"
        style="@style/commonButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_200"
        android:text="@string/ScheduledThreadPool"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnThreadPool" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSingleThreadExecutor"
        style="@style/commonButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_200"
        android:text="@string/SingleThreadExecutor"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnScheduled" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFixedThread"
        style="@style/commonButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_200"
        android:text="@string/FixedThreadPool"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSingleThreadExecutor" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCachedThreadPool"
        style="@style/commonButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_200"
        android:text="@string/CachedThreadPool"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnFixedThread" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnMyThreadPool"
        style="@style/commonButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_200"
        android:text="@string/MyThreadPool"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnCachedThreadPool" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnMyAsyncTask"
        style="@style/commonButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_200"
        android:text="@string/MyAsyncTask"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnMyThreadPool" />


</androidx.constraintlayout.widget.ConstraintLayout>